--- a/app.css
+++ b/app.css
@@ -42,13 +42,13 @@
 /* Dark theme  */
 .darktheme {
   --accent: #61b0f1; /* Hover color */
-  --bg: #818181; /* Background color */
+  --bg: #19171a; /* Background color */
   --sbg: #201e21; /* Cards color */
   --fg: #d8dee9; /* Foreground color */
   --sfg: #3a3a3a; /* Secondary Foreground color */
   --imgcol: linear-gradient(
-    rgba(0, 0, 0, 0.85),
-    rgba(0, 0, 0, 0.85)
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
   ); /* Filter color */
 }
 
