--- a/app.css
+++ b/app.css
@@ -32,7 +32,7 @@
     change the --imgcol value 
     to make the filter to your own */
 
-  --imgbg: url(assets/ikaruga_main.png);
+  --imgbg: url(assets/download.png);
   --imgcol: linear-gradient(
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.7)
