--- a/app.css
+++ b/app.css
@@ -41,7 +41,7 @@
 
 /* Dark theme  */
 .darktheme {
-  --accent: #eb8484; /* Hover color */
+  --accent: #b5897f; /* Hover color */
   --bg: #19171a; /* Background color */
   --sbg: #251d22; /* Cards color */
   --fg: #d8dee9; /* Foreground color */
